# ViennaLS

./: .gitignore  CMakeLists.txt  README.md  format-project.sh  pyproject.toml  setup.py
.github/workflows/: check_source.yml  linux_cache.yml  linux_test.yml  macos_cache.yml  macos_test.yml  windows_cache.yml  windows_test.yml
Examples/: CMakeLists.txt
Examples/AirGapDeposition/: CMakeLists.txt
Examples/Deposition/: CMakeLists.txt
Examples/GeometricAdvection/: CMakeLists.txt
Examples/PatternedSubstrate/: CMakeLists.txt
Examples/PeriodicBoundary/: CMakeLists.txt
Examples/SharedLib/: CMakeLists.txt
Examples/SquareEtch/: CMakeLists.txt
Examples/VoidEtching/: CMakeLists.txt
Examples/VolumeToLevelSets/: CMakeLists.txt
Python/: CMakeLists.txt  pyWrap.cpp
Tests/: CMakeLists.txt
Tests/Advection/: CMakeLists.txt
Tests/Advection2D/: CMakeLists.txt
Tests/AdvectionBenchmark/: CMakeLists.txt
Tests/AdvectionPlane/: CMakeLists.txt
Tests/BooleanOperation/: CMakeLists.txt
Tests/BooleanOperationExactZero/: CMakeLists.txt
Tests/BooleanOperationExactZero1/: CMakeLists.txt
Tests/BoundaryConditions/: CMakeLists.txt
Tests/CalculateCurvatures/: CMakeLists.txt
Tests/CalculateNormalVectors/: CMakeLists.txt
Tests/ConvexHull/: CMakeLists.txt
Tests/ConvexHull3D/: CMakeLists.txt
Tests/DiskMesh/: CMakeLists.txt
Tests/Expand/: CMakeLists.txt
Tests/FeatureDetection/: CMakeLists.txt
Tests/FileWriter/: CMakeLists.txt
Tests/FromMesh/: CMakeLists.txt
Tests/GeometricAdvect/: CMakeLists.txt
Tests/GeometricAdvectMask/: CMakeLists.txt
Tests/GeometricAdvectPerformance/: CMakeLists.txt
Tests/GeometricAdvectTrench/: CMakeLists.txt
Tests/HullMesh/: CMakeLists.txt
Tests/Make3DSphere/: CMakeLists.txt
Tests/MakeBox/: CMakeLists.txt
Tests/MakeGeometry/: CMakeLists.txt
Tests/MakePlane/: CMakeLists.txt
Tests/MakeSphere/: CMakeLists.txt
Tests/MarkVoidPoints/: CMakeLists.txt
Tests/MultiMaterialAdvection/: CMakeLists.txt
Tests/MultiMaterialEtch/: CMakeLists.txt
Tests/PeriodicBoundary2D/: CMakeLists.txt
Tests/ReadFromFile/: CMakeLists.txt
Tests/ReadVolume/: CMakeLists.txt
Tests/RemoveStrayPoints/: CMakeLists.txt
Tests/RotateMesh/: CMakeLists.txt
Tests/Serialize/: CMakeLists.txt
Tests/SmartPointer/: CMakeLists.txt
Tests/VisualizationMesh/: CMakeLists.txt
Tests/VoidDetection/: CMakeLists.txt
Wrapping/: CMakeLists.txt
Wrapping/Python/: CMakeLists.txt
cmake/: ViennaLSConfig.cmake.in  preamble.cmake  prepare.cmake
include/: lsPointData.hpp  lsTestAsserts.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/Examples/: CMakeLists.txt
src/Tests/: CMakeLists.txt
src/Tests/AdvectionBenchmark/: CMakeLists.txt
src/Tests/ConvexHull3D/: CMakeLists.txt
src/Tests/GeometricAdvectPerformance/: CMakeLists.txt
src/Tests/RotateMesh/: CMakeLists.txt
src/Tests/SmartPointer/: CMakeLists.txt
src/Tests/VisualizationMesh/: CMakeLists.txt
src/Tests/VoidDetection/: CMakeLists.txt
src/Wrapping/Python/: CMakeLists.txt
src/cmake/: ViennaLSConfig.cmake.in
